Fixed alignment issue with .splash-clients-text for Home Page

--- a/frontend/wwwroot/scss/main.scss
+++ b/frontend/wwwroot/scss/main.scss
@@ -98,6 +98,7 @@ main {
 
 .splash-clients-text {
     padding: 20px;
+    align-self: center;
 
     font-size: 20px;
     text-align: center;
